desafios infra/desafio2/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetport: 80
  selector:
    app: nginx
