desafios infra/desafio2/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rwrite-target: /
  spec:
    rules:
    - http:
        paths:
        - path: /
          pathtype: Prefix
          backend: 
            service:
              name: my-nginx-svc  
              port: 80
